force-app/main/default/objects/User.object
<CustomObject>
    <fields>
        <fullName>Office__c</fullName>
        <label>Office</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Run_Automation__c</fullName>
        <defaultValue>true</defaultValue>
        <description>We used this so that the Scheduled Job that creates Assumptive Renewals didn&apos;t have the Opportunities set back to &quot;Renewal&quot; when the Opportunity Product records were added.  The goal is to have it implemented everywhere.</description>
        <inlineHelpText>Only set this to False if you want the user to bypass automation&apos;s that include this check.</inlineHelpText>
        <label>Run Automation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Run_Validation__c</fullName>
        <defaultValue>true</defaultValue>
        <description>This field provides an optional way of exempting a system user from triggering validation rules, so I can execute data update tasks successfully. All newly create Validation Rules should include this check.</description>
        <inlineHelpText>WARNING: Only set this to False if you want the user to bypass all validation rules.</inlineHelpText>
        <label>Run Validation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TIMBASURVEYS__SurveyReminder__c</fullName>
        <defaultValue>&apos;&apos;</defaultValue>
        <label>SurveyReminder</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>TIMBASURVEYS__reminderStringSize__c</fullName>
        <formula>LEN(TIMBASURVEYS__SurveyReminder__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>reminderStringSize</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>cnx__Agent_AutoLogin__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Auto Login</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>cnx__Agent_Extension__c</fullName>
        <description>Obsolete, use the custom field Agent Phone Extension</description>
        <label>obsolete</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cnx__Agent_ID__c</fullName>
        <label>Agent Id</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cnx__Agent_MobileAgent__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Mobile Agent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>cnx__Agent_MobileMode__c</fullName>
        <label>Mobile Agent Mode</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>CALL_BY_CALL</fullName>
                </value>
                <value>
                    <fullName>NAILED_CONNECTION</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>cnx__Agent_MobileNumber__c</fullName>
        <label>Mobile Agent Dial Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>cnx__Agent_PasswordEncrypted__c</fullName>
        <label>Agent Password</label>
        <length>127</length>
        <maskChar>asterisk</maskChar>
        <maskType>all</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>cnx__Agent_Password__c</fullName>
        <label>obsolete</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cnx__Agent_Phone_Extension__c</fullName>
        <label>Agent Extension</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>cnx__Agent_SpeedDialNumbers__c</fullName>
        <description>A list of names and numbers that will be added to the speed dial list.</description>
        <label>Speed Dial Numbers</label>
        <length>1060</length>
        <type>LongTextArea</type>
    </fields>
    <listViews>
        <fullName>ActiveUsers</fullName>
        <columns>FULL_NAME</columns>
        <columns>Run_Automation__c</columns>
        <columns>Run_Validation__c</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Active Users</label>
    </listViews>
    <listViews>
        <fullName>AdminUsers</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>equals</operation>
            <value>System Administrator</value>
        </filters>
        <label>Admin Users</label>
    </listViews>
    <listViews>
        <fullName>AllUsers</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>Run_Automation__c</columns>
        <columns>Run_Validation__c</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All Users</label>
    </listViews>
    <sharingModel>Read</sharingModel>
</CustomObject>